--- a/pagina cadastro/css/cabecalho.css
+++ b/pagina cadastro/css/cabecalho.css
@@ -64,6 +64,8 @@ footer{
     width: 100%;
     line-height: 2rem;
     position: fixed;
+    font-family:  "Montserrat", sans-serif;
+    color: #d9d9d9;
 }
 
 a{
