--- a/pagina principal/CSS/style.css
+++ b/pagina principal/CSS/style.css
@@ -224,7 +224,7 @@ a:visited{
     flex-grow: 1; 
     text-align: center;
     margin: 0; 
-    font-family: "Roboto Condensed", sans-serif;
+    font-family:  "Montserrat", sans-serif;
     color: #d9d9d9;
     font-size: 18px;
 }
