--- a/pagina cadastro/css/cadastro.css
+++ b/pagina cadastro/css/cadastro.css
@@ -1,8 +1,11 @@
-* {
-    margin: 0;
+*{
     padding: 0;
+    margin: 0;
+    border: 0;
     box-sizing: border-box;
 }
+
+
 
 body {
     background-color: #d9d9d9;
@@ -12,6 +15,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 150px;
 }
 
 .conteiner_form {
@@ -25,21 +29,22 @@ main {
     justify-content: center;
     align-items: center;
     margin-top: 200px;
-    background-color: #ccabab;
+    background-color: #bb8282;
 }
 
 .form_login {
-    font-family:  "Montserrat", sans-serif;
+    font-family: "Montserrat", sans-serif;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+
+    
     width: 400px;
-    margin-top: 50px; /* Alterei o valor para ficar mais adequado para dispositivos menores */
-    justify-content: center;
-    max-width: 700px;
-    margin: 0 auto; /* Isso centralizará horizontalmente o formulário */
+    height: 400px;
+    margin: 10px; 
     padding: 20px;
     border-radius: 10px;
-    background-color: #f9f9f9; /* Cor de fundo do formulário */
+    background-color: #f9f9f9; 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -71,23 +76,19 @@ button[type="submit"] {
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    font-size: 15px;
 }
 
 button[type="submit"]:hover {
     background-color: #e65100;
 }
 
-/* Media queries para dispositivos menores */
-
-@media only screen and (max-width: 768px) {
-    .form_login {
-        width: 90%; /* Redimensionar o formulário para ocupar 90% da largura da tela */
+@media screen and (max-width: 480px){
+    main{
+        padding-top: 100px;
     }
-}
 
-@media only screen and (max-width: 480px) {
-    .form_login {
-        width: 100%; /* Redimensionar o formulário para ocupar 100% da largura da tela */
-        margin-top: 20px; /* Ajustar a margem superior para dispositivos ainda menores */
+    .form_login{
+        width: 300px;
     }
 }
