--- a/pagina principal/CSS/style.css
+++ b/pagina principal/CSS/style.css
@@ -60,17 +60,20 @@ header{
     margin-top: -5px;
     margin-bottom: 0px;
     align-items: center;
+    justify-content: space-between;
 }
 
 #title-section-onu{
     margin-bottom: 30px;
-    font-family: "Righteous", sans-serif;
-    font-size: 25px;
+    font-family: "Francois One", sans-serif;
+    font-size: 30px;
+    color: #024b57;
 }
 
 #p-section-onu{
     width: 600px;
     height: 100px;
+    font-family:  "Montserrat", sans-serif;
 }
 
 .btn-sobre-nos{
@@ -97,11 +100,12 @@ header{
     font-size: 1.5em;
     font-family: "Francois One", sans-serif;
     color: #024b57;
+    font-size: 25px;
 }
 
 .section-2{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     margin: 20px;
 }
 
@@ -114,6 +118,8 @@ header{
 #p-section-2{
     width: 400px;
     margin-bottom: 20px;
+    font-family:  "Montserrat", sans-serif;
+    text-align: justify;
 }
 
 #btn-saiba-mais{
@@ -152,11 +158,13 @@ header{
 
 .section-3{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-around
 }
 
 #p-section-3{
     width: 400px;
+    font-family:  "Montserrat", sans-serif;    
+    text-align: justify;
 }
 
 .section-4{
@@ -172,9 +180,13 @@ header{
     margin-bottom: 20px;
     margin-top: 20px;
     font-family: "Francois One", sans-serif;
-    color: #000000;
+    color: #024b57;
 }
 
+.p-section-4{
+    font-family:  "Montserrat", sans-serif;    
+    font-size: 18px;
+}
 
 #btn-seja-voluntario{
     margin-top: 30px;
@@ -195,6 +207,10 @@ header{
 
 #btn-seja-voluntario:hover{
     background-color: #035461;
+}
+
+#a-btn-seja-voluntario{
+    text-decoration: none;
 }
 
 footer{
@@ -237,15 +253,15 @@ a:visited{
     
     header{
         display: flex;
-        
+        justify-content: center;
     }
 
     .img-logo-header{
-        width: 150px;
+        width: 200px;
     }
 
     .btn-info-nav{
-        display: none;
+       display: none;
     }
     
     .list-social{
@@ -257,19 +273,19 @@ a:visited{
     }
 
     #title-section-onu{
-        font-size: 20px;
+        font-size: 18px;
     }
 
     #p-section-onu{
         width: 100%;
         font-size: 14px;
-        text-align: center;
+        text-align: justify;
     }
 
     .btn-sobre-nos{
         height: 30px;
         width: 80px;
-        margin-top: 50px;
+        margin-top: 70px;
         font-size: 15px;
     }
 
@@ -288,7 +304,7 @@ a:visited{
     #p-section-2{
         margin: 20px;
         width: 100%;
-        text-align: center;
+        text-align: justify;
     }
 
     #img-section-onu{
@@ -309,7 +325,7 @@ a:visited{
     #p-section-3{
         width: 300px;
         margin-bottom: 20px;
-        text-align: center;
+        text-align: justify;
         font-size: 14px;
     }
 
@@ -328,6 +344,7 @@ a:visited{
     .p-section-4{
         text-align: center;
         width: 100%;
+        font-size: 15px;
     }
 
     #btn-seja-voluntario{
