--- a/pagina onu/css/pagina-onu.css
+++ b/pagina onu/css/pagina-onu.css
@@ -11,7 +11,6 @@
 
 header{
     background-color: #006C7C;
-    position:fixed;
     width: 100%;
 }
 
@@ -31,14 +30,14 @@ header{
     padding: 25px 0;
     color: #d9d9d9;
     background-color: #006C7C;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 600;
     font-size: 20px;
 }
 
 .btn-info-nav:hover{
-    border-bottom-color: #F7EB12;
-    color: #F7EB12;
+    border-bottom-color: #faf36d;
+    color: #faf36d;
 }
 
 .list-social{
@@ -52,8 +51,100 @@ header{
     transform: scale(1.1);
 }
 
+h1{
+    font-family: "Montserrat", sans-serif;
+    color: white;
+    background-color: #1690a3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 65px;
+    height: 260px;
+    border-bottom: #faf36d solid 4px;
+}
 
+.quem-somos{
+    background-color: #f1f1f1;
+    display: flex;
+    font-size: 15px;
+    font-family: "Montserrat", sans-serif;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
 
+.p-quem-somos{
+    text-align: center;
+    width: 400px;
+    padding: 30px;
+    margin-left: 400px;
+    justify-content: center;
+    align-items: center;
+    font-size: larger;
+}
+
+.div-valores{
+    background-color: #f9f9f9;
+}
+
+.valores{
+    background-color: #f9f9f9;
+    font-family: "Montserrat", sans-serif;
+    height: 600px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    width: 400px;
+    margin: auto;
+}
+
+.visao-de-transformacao{
+    background-color: #1690a3;
+    font-family: "Montserrat", sans-serif;
+    color: white;
+    text-align: center;
+    font-size: larger;
+    padding: 10px;
+}
+
+.h2-visao-de-transformacao{
+    color: #1690a3;
+    background-color: #faf36d;
+    width: 500px;
+    margin: auto;
+    padding: 10px;
+}
+
+.p-visao-de-transformacao{
+    text-align: center;
+    padding: 10px;
+}
+
+.h2-historia{
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    color: #1690a3;
+    padding: auto;
+    margin-top: 30px;
+    font-size: 40px;
+}
+
+.div-historia{
+    font-family: "Montserrat", sans-serif;
+    display: flex;
+    padding-bottom: 30px;
+}
+
+.p-historia{
+    padding: 30px;
+    font-size: 19px;
+}
+
+.img-historia{
+    display: flex;
+    padding: 40px;
+}
 
 footer{
     background-color: #006C7C;
@@ -61,9 +152,8 @@ footer{
     bottom: 0;
     width: 100%;
     line-height: 2rem;
-    position: fixed;
-    font-family:  "Montserrat", sans-serif;
-    color: #d9d9d9;
+    position: relative;
+    border-top: #faf36d solid;
 }
 
 a{
@@ -85,8 +175,77 @@ a:visited{
     flex-grow: 1; 
     text-align: center;
     margin: 0; 
+    font-family: "Montserrat", sans-serif;
+    color: #d9d9d9;
+    font-size: 18px;
 }
 
 .img-footer{
     margin-right: auto; 
+}
+
+.titulo{
+display: flex;
+align-items: center;
+justify-content: center;
+font-size: 40px;
+height: 180px;
+background-color: rgb(248, 135, 30);
+}
+
+.main-container{
+    background-color: white;
+    height: 3000px;
+
+}
+
+.img-texto{
+    display: flex;
+    justify-content:center;
+
+}
+
+.container-texto{
+display: table-column;
+justify-content: center;
+align-items: center;
+margin-top: -55px;
+}
+
+.img-onu{
+    margin-left: 260px;
+
+}
+
+.texto-p{
+    font-size: 26px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding: 40px;
+}
+
+.texto-p2{
+    font-size: 20px;
+    padding:40px;
+}
+
+.img-texto2{
+margin-left: 120px;
+display: flex;
+}
+
+.img-onuu{
+    height: 150px;
+    width: 150px;
+    
+}
+
+.texto-onuu{
+    padding: 20px;
+    font-size:20px;
+
+}
+
+#secti{
+    margin-bottom: 80px;
 }
