--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,14 +31,14 @@ header{
     padding: 25px 0;
     color: #d9d9d9;
     background-color: #006C7C;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 600;
     font-size: 20px;
 }
 
 .btn-info-nav:hover{
-    border-bottom-color: #F7EB12;
-    color: #F7EB12;
+    border-bottom-color: #faf36d;
+    color: #faf36d;
 }
 
 .list-social{
@@ -79,10 +79,10 @@ header{
 .btn-sobre-nos{
     height: 40px;
     width: 120px;
-    margin-top: 20px;
+    margin-top: 50px;
     background-color: #006C7C;
     color: white;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Francois One", sans-serif;
     font-weight: 500;
     font-size: 16px;
     border-radius: 5px;
@@ -128,7 +128,7 @@ header{
     margin-top: 20px;
     background-color: #006C7C;
     color: white;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Francois One", sans-serif;
     font-weight: 500;
     font-size: 16px;
     border-radius: 5px;
@@ -197,7 +197,7 @@ header{
     border-radius: 5px;
     font-weight: 500;
     font-size: 16px;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Francois One", sans-serif;
     background-color: #006C7C;
     color: white;
     display: flex;
