--- a/pagina cadastro/css/cabecalho.css
+++ b/pagina cadastro/css/cabecalho.css
@@ -47,14 +47,14 @@ nav{
     padding: 25px 0;
     color: #d9d9d9;
     background-color: #006C7C;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 600;
     font-size: 20px;
 }
 
 .btn-more-info:hover{
-    border-bottom-color: #F7EB12;
-    color: #F7EB12;
+    border-bottom-color: #faf36d;
+    color: #faf36d;
 }
 
 footer{
