--- a/pagina cadastro/css/cadastro.css
+++ b/pagina cadastro/css/cadastro.css
@@ -69,7 +69,7 @@ input[type="tel"]:focus {
 }
 
 button[type="submit"] {
-    background-color: #f57c00;
+    background-color: #ee861d;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -80,7 +80,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #e65100;
+    background-color: #f17430;
 }
 
 @media screen and (max-width: 480px){
