--- a/pagina sobre nos/css/sobre-nos.css
+++ b/pagina sobre nos/css/sobre-nos.css
@@ -208,6 +208,7 @@ a:visited{
 
     h1{
         font-size: 30px;
+        height: 100px;
     }
 
     .img-quem-somos{
@@ -215,21 +216,22 @@ a:visited{
     }
 
     .p-quem-somos{
-        font-size: 15px;
+        font-size: 18px;
     }
 
     .valores{
         display: flex;
         flex-direction: column;
         align-items: center;
+
     }
 
     .img-valores1{
-        width: 300px;
+        width: 360px;
     }
 
     .img-valores2{
-        width: 300px;
+        width: 360px;
     }
 
     .visao-de-transformacao{
