--- a/pagina saiba mais/css/pagina-saiba-mais.css
+++ b/pagina saiba mais/css/pagina-saiba-mais.css
@@ -9,6 +9,7 @@
 header{
     background-color: #006C7C;
     width: 100%;
+    position: fixed;
 }
 
 .list-nav{
@@ -50,21 +51,20 @@ header{
 
 
 .titulo{
-font-family:"Montserrat", sans-serif ;
-color: white;
-display: flex;
-align-items: center;
-justify-content: center;
-font-size: 40px;
-height: 180px;
-background-color: #1690a3;
-border-bottom: #faf36d solid;
+    font-family:"Montserrat", sans-serif ;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 25px;
+    height: 250px;
+    background-color: #1690a3;
+    border-bottom: #faf36d solid;
 }
 
 .main-container{
     background-color: white;
     height: 3000px;
-
 }
 
 .img-texto{
@@ -75,8 +75,7 @@ border-bottom: #faf36d solid;
 .container-texto{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    text-align: center;
+    align-items: center;
     
 }
 
@@ -87,7 +86,7 @@ border-bottom: #faf36d solid;
 }
 
 .texto-p{
-    font-size: 25px;
+    font-size: 20px;
     margin-top: 40px;
     margin-bottom: 40px;
     padding: 40px;
@@ -95,7 +94,7 @@ border-bottom: #faf36d solid;
 }
 
 .texto-p2{
-    font-size: 25px;
+    font-size: 20px;
     padding:40px;
     font-family: "Montserrat", sans-serif;
 }
@@ -108,7 +107,6 @@ border-bottom: #faf36d solid;
 .img-onuu{
     height: 150px;
     width: 150px;
-    
 }
 
 .texto-onuu{
@@ -119,6 +117,10 @@ border-bottom: #faf36d solid;
 
 #secti{
     margin-bottom: 100px;
+    margin-top: 50px;
+    margin-left: 40px;
+    text-align: justify;
+    
 }
 
 footer{
@@ -127,7 +129,6 @@ footer{
     bottom: 0;
     width: 100%;
     line-height: 2rem;
-    position: fixed;
     border-top: #faf36d solid;
 }
 
@@ -163,10 +164,7 @@ a:visited{
 
 @media screen and (max-width: 480px) {
     
-    header{
-        display: flex;
-        justify-content: center;
-    }
+    
 
     .img-logo-header{
         width: 200px;
@@ -215,9 +213,7 @@ a:visited{
         justify-content: center;
     }
 
-    .secti{
-        display: flex;
-    }
+    
 
    .img-texto2{
         width: 100%;
