--- a/CSS/style.css
+++ b/CSS/style.css
@@ -86,6 +86,7 @@ header{
     font-weight: 500;
     font-size: 16px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .btn-sobre-nos:hover{
@@ -132,6 +133,7 @@ header{
     font-weight: 500;
     font-size: 16px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 #btn-saiba-mais:hover{
@@ -203,6 +205,7 @@ header{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    cursor: pointer;
 }
 
 #btn-seja-voluntario:hover{
