--- a/pagina cadastro/css/cabecalho.css
+++ b/pagina cadastro/css/cabecalho.css
@@ -14,12 +14,6 @@ header{
     width: 100%;
 }
 
-nav{
-    width: 100%;
-    position: fixed;
-    background-color: #006C7C;
-}
-
 .list-nav{
     display: flex;
     align-items: center;
@@ -66,6 +60,7 @@ footer{
     position: fixed;
     font-family:  "Montserrat", sans-serif;
     color: #d9d9d9;
+    border-top: #faf36d;
 }
 
 a{
@@ -81,6 +76,7 @@ a:visited{
     justify-content: space-between;
     align-items: center;
     padding: 5px; 
+    border-top: solid #faf36d;
 }
 
 #p-footer {
