--- a/pagina saiba mais/css/pagina-saiba-mais.css
+++ b/pagina saiba mais/css/pagina-saiba-mais.css
@@ -14,7 +14,7 @@ header{
 
 .list-nav{
     display: flex;
-    align-items: center;
+    align-items:center;
     list-style: none;
     justify-content: space-around;
 }
@@ -40,8 +40,8 @@ header{
 
 .list-social{
     display: flex;
-    align-items: end;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: space-between;
     gap: 20px;
 }
 
@@ -56,16 +56,12 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 25px;
+    font-size: 30px;
     height: 250px;
     background-color: #1690a3;
     border-bottom: #faf36d solid;
 }
 
-.main-container{
-    background-color: white;
-    height: 3000px;
-}
 
 .img-texto{
     display: flex;
@@ -214,7 +210,6 @@ a:visited{
     }
 
     
-
    .img-texto2{
         width: 100%;
         display: flex;
